<resources>
    <string name="app_name">Jagat News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="the_hindu">The Hindu</string>
    <string name="dd_news">DD NEWS</string>
    <string name="hindustan_times">Hindustan Times</string>
    <string name="toi">Times of India</string>
    <string name="indian_express">Indian Express</string>
    <string name="wion">WION</string>
    <string name="bbc">BBC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="economy">Economy</string>
    <string name="scroll_view" />
    <string name="hyperlink"><a href="https://www.linkedin.com/in/shaan-tyagi-5a921b212/">LinkedIn Profile</a></string>
    <string name="company_name_huntertech">Company Name: HunterTech</string>
    <string name="e_mail_tyagis4606_gmail_com">E-Mail: tyagis4606@gmail.com</string>
    <string name="contact_details">Contact Details:</string>
    <string name="jagat_news">Jagat News</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--    <string name="hyperlink2">Company Name: HunterTech</string>-->
</resources>