<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#DFDCDC"
    android:backgroundTint="#D3C9C9">

    <TextView
        android:id="@+id/tc1"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/contact_details"
        android:textAlignment="center"
        android:textColor="#292525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tc2"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/e_mail_tyagis4606_gmail_com"
        android:textAlignment="center"
        android:textColor="#292525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tc1" />

    <TextView
        android:id="@+id/tc3"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/company_name_huntertech"
        android:textAlignment="center"
        android:textColor="#292525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tc2" />

    <TextView
        android:id="@+id/tc4"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="LinkedIn Profile: Shaan Tyagi"
        android:textAlignment="center"
        android:textColor="#292525"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tc3" />





</androidx.constraintlayout.widget.ConstraintLayout>